--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @font-face
 {
     font-family: "electrolize";
@@ -26,6 +27,16 @@ html
     margin: 0;
     padding: 0;
     box-sizing: 0;
+}
+
+h2
+{
+    font-weight: lighter;
+}
+
+h3
+{
+    font-weight: lighter;
 }
 
 header div.container-grid
@@ -156,6 +167,7 @@ div.menu nav
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 120px;
 }
 
 #orcamento .card
@@ -220,6 +232,7 @@ div.menu nav
     outline: none;
     border: none;
     box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.5);
+    color: white;
 }
 
 #orcamento .imagem-botao
@@ -245,7 +258,7 @@ form
 
 #orcamento .imagem-botao button
 {
-    margin-top: 150px;
+    margin-top: 90px;
     margin-bottom: 50px;
 }
 
@@ -258,4 +271,257 @@ form
     background-color: white;
     box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.5);
     border-radius: 20px;
+    font-family: "bruno";
+    font-size: 32px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 120px;
+}
+
+#cases .texto-cases
+{
+    width: 210px;
+    height: 230px;
+    margin-left: 100px;
+    margin-top: 100px;
+}
+
+#cases .button-cases
+{
+    display: flex;
+    align-items: flex-end;
+    margin-right: 100px;
+}
+
+#cases .button-cases button
+{
+    width: 250px;
+    height: 130px;
+    margin-bottom: 90px;
+    background-color: var(--laranja-gaia);
+    font-family: "bruno";
+    border: none;
+    font-size: 28px;
+    color: white;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+#empresa .repre
+{
+    font-family: "bruno";
+    font-size: 32px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 120px;
+}
+
+#empresa .repre img
+{
+    margin-top: 50px;
+    width:600px;
+}
+
+#duvidas 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#duvidas h2
+{
+    font-family: "bruno";
+    font-size: 40px;
+}
+
+#duvidas .duvida1 .pergunta1
+{
+    margin-top: 50px;
+    box-shadow: 9px 4px 20px 1px rgba(0,0,0,0.5);
+    width: 900px;
+    height: 100px;
+    border-radius: 20px;
+}
+
+#duvidas .duvida1 .pergunta1 h3
+{
+    text-align: center;
+    font-family: "bruno";
+    font-size: 32px;
+    padding-top: 32px;
+}
+
+#duvidas .duvida1 .resposta1
+{
+    box-shadow: 15px 10px 10px 1px rgba(0,0,0,0.5);
+    width: 845px;
+    height: 75px;
+    margin-left: 25px;
+    border-radius: 20px;
+}
+
+#duvidas .duvida1 .resposta1 p
+{
+    text-align: center;
+    padding-top: 26px;
+    font-family: "electrolize";
+    font-size: 17px;
+}
+
+#duvidas .duvida2 .pergunta2
+{
+    margin-top: 50px;  
+    margin-bottom: 50px;
+    box-shadow: 9px 4px 20px 1px rgba(0,0,0,0.5);
+    width: 900px;
+    height: 100px;
+    border-radius: 20px;
+}
+
+#duvidas .duvida2 .pergunta2 h3
+{
+    text-align: center;
+    font-family: "bruno";
+    font-size: 28Px;
+    padding-top: 32px;
+}
+
+#duvidas .duvida2 .resposta2
+{
+    margin-top: 35px;
+    box-shadow: 15px 10px 10px 1px rgba(0,0,0,0.5);
+    width: 845px;
+    height: 75px;
+    margin-left: 25px;
+    border-radius: 20px;
+}
+
+#duvidas .duvida2 .resposta2 p
+{
+    text-align: center;
+    padding-top: 26px;
+    font-family: "electrolize";
+    font-size: 18px;    
+}
+
+#duvidas .duvida3 .pergunta3
+{
+    margin-top: 130px;  
+    margin-bottom: 50px;
+    box-shadow: 9px 4px 20px 1px rgba(0,0,0,0.5);
+    width: 900px;
+    height: 100px;
+    border-radius: 20px;
+}
+
+#duvidas .duvida3 .pergunta3 h3
+{
+    text-align: center;
+    font-family: "bruno";
+    font-size: 27px;
+    padding-top: 32px;
+}
+
+#duvidas .duvida3 .resposta3 
+{
+    margin-top: 35px;
+    box-shadow: 15px 10px 10px 1px rgba(0,0,0,0.5);
+    width: 845px;
+    height: 75px;
+    margin-left: 25px;
+    border-radius: 20px;
+}
+
+#duvidas .duvida3 .resposta3 p
+{
+    text-align: center;
+    padding-top: 26px;
+    font-family: "electrolize";
+    font-size: 18px; 
+}
+
+#duvidas .duvida4 .pergunta4
+{
+    margin-top: 130px;  
+    margin-bottom: 50px;
+    box-shadow: 9px 4px 20px 1px rgba(0,0,0,0.5);
+    width: 900px;
+    height: 100px;
+    border-radius: 20px;
+}
+
+#duvidas .duvida4 .pergunta4 h3
+{
+    text-align: center;
+    font-family: "bruno";
+    font-size: 23px;
+    padding-top: 32px;
+}
+
+#duvidas .duvida4 .resposta4 
+{
+    margin-top: 40px;
+    box-shadow: 15px 10px 10px 1px rgba(0,0,0,0.5);
+    width: 845px;
+    height: 75px;
+    margin-left: 25px;
+    border-radius: 20px;
+}
+
+#duvidas .duvida4 .resposta4 p
+{
+    text-align: center;
+    padding-top: 26px;
+    font-family: "electrolize";
+    font-size: 18px; 
+}
+
+#rodape .banner_r
+{
+    margin-top: 200px;
+    height: 100vh;
+    background-image:url(img/banner_rodape.png); 
+    background-repeat: no-repeat;
+    width: auto;
+    background-position:40%;  
+}
+
+#rodape .banner_r h2
+{
+    text-align: center;
+    font-family: "bruno";
+    font-weight: lighter;
+    font-size: 40px;
+}
+
+#rodape .banner_r .texto-botao .textor  button
+{
+    background-color: var(--verde-gaia);
+    margin-left: 75px;
+    font-family: "electrolize";
+    width: 250px;
+    height: 60px;
+    border: none;
+    border-radius: 20px;
+    text-align: left;
+    color: white;
+    font-size: 20px;
+    text-indent: 15px;
+}
+
+#rodape .banner_r .texto-botao .textor p
+{
+    font-family: "electrolize";
+    font-size: 40px;
+    width: 750px;
+    height: 300px;
+    margin-left: 75px;
+    margin-top: 100px;
+    text-align: justify;
+    margin-bottom: 100px;
 }
